# post_transcribe

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .env  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: pdfs.py
apps/api/app/core/: config.py
apps/api/app/schemas/: pdfs.py
apps/api/app/services/: document_service.py  image_service.py  pdf_service.py  thumbnail_service.py
apps/api/app/services/ocr/: base.py  layout_structure_service.py  tesseract_service.py
apps/api/app/storage/: manager.py
apps/api/app/utils/: files.py  ids.py  images.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: ActionBar.tsx  AppErrorBoundary.tsx  DocumentProgressPanel.tsx  ErrorState.tsx  ImageCard.tsx  ImageGrid.tsx  ImageLightbox.tsx  ImageThumbnailList.tsx  PdfUploadForm.tsx  ResultCard.tsx  StatusBadge.tsx  ThemeToggle.tsx
apps/web/src/hooks/: useAnalyzePolling.ts  useImageSelection.ts  useTranscriptionPolling.ts
apps/web/src/pages/: ResultsPage.tsx  ReviewPage.tsx  UploadPage.tsx
apps/web/src/services/: apiClient.ts  pdfService.ts
apps/web/src/theme/: ThemeProvider.tsx
apps/web/src/types/: api.ts  domain.ts
apps/web/src/utils/: constants.ts  errorGuidance.ts  format.ts  processing.ts
